# rust-iot-pre-provision-hook-example

./: .gitignore  Cargo.toml  README.md
src/: main.rs  tests.rs
src/schemas/: input.json
src/tests/: helpers.rs
