[package]
name = "rust-iot-pre-provision-hook-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
lambda_runtime = "0.9.1"
serde = "1.0.136"
serde_json = "1.0.111"
thiserror = "1.0.56"
jsonschema = "0.17.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
